# bbctl

./: .gitignore  README.md  bbctl.spec  pyproject.toml
.github/workflows/: release.yml
bbctl/: branches.py  main.py  projects.py  repositories.py  setup.py  users.py
tests/: test_branches.py  test_projects.py  test_repositories.py  test_users.py
